# APXV

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEV-QUICKSTART.md  Dockerfile  LICENSE  NOTICE  OBSERVABILITY.md  PHASE1-STATUS.md  PHASE2-STATUS.md  PROJECT-OVERVIEW.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.ui.yml  docker-compose.yml  index.html  main.js  preview.bat  preview.ps1  pyproject.toml  styles.css
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  pages.yml  release-desktop.yml
RUNBOOKS/: RUNBOOK-DEPLOYMENT.md  RUNBOOK-INCIDENT-RESPONSE.md  RUNBOOK-OPERATIONS.md  RUNBOOK-UPGRADE.md
agents/: __init__.py  agent1.py  agent2.py  agent3.py  agent_base.py  agent_registry.py  agentic_contract.py  artifact_provider.py  audit_logger.py  auth.py  backup_restore.py  capability_checker.py  capability_policy.py  catalog_quality.py  cors.py  encryption_engine.py  env.py  governance.py  governance_approval.py  id_compat.py  install_profile.py  job_queue.py  llm_backend.py  llm_reasoner.py  local_api.py  observability.py  pack_catalog.py  pack_install.py  pack_scaffold.py  pipeline_profile.py  pipeline_runner.py  pipeline_service.py  pipeline_spec.py  pipeline_store.py  proof_intent.py  proof_studio.py  redaction_engine.py  runtime.py  store.py  studio_service.py  (+4 more)
agents/api_v2/: context.py  (+2 more)
auditor/: apx_verify.py  apxv_verify.py  verify_artifact_chain.py  verify_audit_log.py
docker/: Dockerfile.ui  nginx-default.conf
docs/: AIR-GAP-INSTALL.md  APX-V1-MIGRATION-PLAN.md  BUILD-YOUR-FIRST-PACK.md  BUILDING.md  CLEAN-DEMO-INSTANCE.md  DEMO-SCRIPT-V1.1.md  DEMO-SCRIPT.md  DOCKER.md  DOWNLOADS.md  INSTALL-RUST.md  INSTALL-USER.md  LOCAL-API-V1.md  LOCAL-API-V2.md  LOCAL-API.md  MARKET-LANDSCAPE.md  MIGRATION-v1.3.md  MIGRATION-v1.4.md  MIGRATION-v1.5.md  PACK-CATALOG.md  PROOF-STUDIO.md  PUBLISH-READINESS.md  QUICKSTART.md  RELEASE-v1.1.0.md  SOVEREIGN-SETUP.md  V1.1-PUBLIC-LAUNCH-CHECKLIST.md
governance-libraries/: README.md
rust/: Cargo.toml  README.md
rust/apx-circuits/: Cargo.toml  README.md
rust/apx-circuits/circuits/: pipeline_attestation.rs  redaction_proof.rs  rule_binding.rs
rust/apx-circuits/keys/: manifest.json  pipeline.pk  pipeline.vk  redaction.pk  redaction.vk  rule-binding.vk
rust/apx-circuits/src/: main.rs
rust/apx-zk/: Cargo.toml
rust/apx-zk/keys/: batch-merkle.pk  batch-merkle.vk  core-redaction.vk  entity-manifest.json  merkle-inclusion.pk  normalization.vk  redaction-v1.vk  threat.pk  voice-redaction.vk
rust/apx-zk/src/: keygen.rs  lib.rs  main.rs  poseidon.rs  poseidon_constants.rs  poseidon_gadget.rs  poseidon_tests.rs
rust/apx-zk/src/circuits/: batch_merkle.rs  compliance.rs  core_redaction.rs  merkle_inclusion.rs  mod.rs  normalization.rs  redaction_v1.rs  threat.rs  voice_redaction.rs
rust/apx-zk/tests/fixtures/: batch_merkle_ec2.json
rust/apxv-circuits/: Cargo.toml  README.md
rust/apxv-circuits/circuits/: pipeline_attestation.rs  redaction_proof.rs  rule_binding.rs
rust/apxv-circuits/keys/: manifest.json  rule-binding.pk
rust/apxv-circuits/src/: main.rs
rust/apxv-zk/: Cargo.toml
rust/apxv-zk/keys/: batch-merkle.pk  batch-merkle.vk  compliance.pk  compliance.vk  core-redaction.pk  entity-manifest.json  merkle-inclusion.vk  normalization.pk  redaction-v1.pk  threat.vk  universal-predicate-v1.pk  universal-predicate-v1.vk  voice-redaction.pk
rust/apxv-zk/src/: keygen.rs  lib.rs  main.rs  poseidon.rs  poseidon_constants.rs  poseidon_gadget.rs  poseidon_tests.rs
rust/apxv-zk/src/circuits/: batch_merkle.rs  compliance.rs  core_redaction.rs  merkle_inclusion.rs  mod.rs  normalization.rs  redaction_v1.rs  threat.rs  universal_predicate.rs  voice_redaction.rs
rust/apxv-zk/tests/fixtures/: batch_merkle_ec2.json
rust/circuits/: pipeline_attestation.rs  redaction_proof.rs  rule_binding.rs
rust/keys/: manifest.json
rust/src/: main.rs
scripts/: __init__.py  apx_ctl.py  apx_demo.ps1  apx_demo.py  apx_demo.sh  apx_doctor.py  apx_serve.py  apx_verify_bundle.py  apxv_bootstrap.py  apxv_ctl.py  apxv_demo.ps1  apxv_demo.py  apxv_demo.sh  apxv_doctor.py  apxv_serve.py  apxv_verify_bundle.py  build-desktop.ps1  build-desktop.sh  ceremony_transcript.py  desktop-lifecycle-verify.ps1  docker_entrypoint.py  entity_zk_manifest.py  export_verifier_bundle.py  extract_redaction_patterns.py  fresh_reset.py  install-docker.ps1  install-docker.sh  install-full.ps1  install-full.sh  install.ps1  install.sh  launcher_prepare.py  migrate_branding_v1_4.py  migrate_install_v1_4.py  onboard.py  patch_jobs_stream_cors.py  pr1_linux_fetch_verify.sh  pr2_server_lifecycle_verify.ps1  pr2_server_lifecycle_verify.sh  pr3_onboarding_verify.sh  (+27 more)
tests/: conftest.py  helpers.py  test_agent_registry.py  test_ai_governance_pack.py  test_api_keys.py  test_apx_demo.py  test_apx_zk_entity.py  test_apxv_bootstrap.py  test_apxv_demo.py  test_apxv_zk_entity.py  test_audit_logger.py  test_backup_restore.py  test_bootstrap_integrations.py  test_capability_policy.py  test_ceremony_transcript.py  test_cors.py  test_deep_redact.py  test_desktop_cross_platform_pr18.py  test_desktop_pr15.py  test_docker_sovereign_pr10.py  test_document_processing_pack.py  test_encryption_engine.py  test_format_parser.py  test_format_parser_full.py  test_governance_approval.py  test_install_full_pr14.py  test_install_profile.py  test_integrity_cli_output.py  test_integrity_diagnostics.py  test_llm_backend.py  test_local_api.py  test_local_api_v2.py  test_onboard.py  test_pack_install.py  test_pattern_catalog.py  test_phase2.py  test_pipeline.py  test_pipeline_api.py  test_pipeline_runner.py  test_pipeline_spec.py  (+18 more)
ui/: .gitignore  README.md  package.json  pnpm-lock.yaml
ui/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/apps/desktop/src-tauri/capabilities/: default.json
ui/apps/desktop/src-tauri/icons/: icon.icns
ui/apps/desktop/src-tauri/src/: bootstrap.rs  lib.rs  main.rs  operator_key.rs  paths.rs  python_cmd.rs  server.rs  tray.rs
website/: README.md  index.html  main.js  preview.bat  preview.ps1  styles.css
(+221 files in other folders)
