[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apxv"
version = "1.5.0"
description = "APXV — air-gapped governed agent platform (Attested Proof Execution Verified): Studio, Workbench, Proof Profiles, Groth16, local API v2"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
  {name = "APXVdev"}
]
dependencies = [
    "cryptography>=41.0.0",
    "PyNaCl>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/APXV-Official/APXV"
Documentation = "https://github.com/APXV-Official/APXV/blob/main/docs/QUICKSTART.md"
Repository = "https://github.com/APXV-Official/APXV"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

voice = [
    "vosk>=0.3.45",
    "pyttsx3>=2.90",
]

[project.scripts]
run-apxv = "scripts.run_apxv:main"
setup-zk = "scripts.setup_zk:main"
setup-first-run = "scripts.setup_first_run:main"
apxv-doctor = "scripts.apxv_doctor:main"
verify-attestation = "scripts.verify_attestation:main"
apxv-verify-bundle = "scripts.apxv_verify_bundle:main"
apxv-ctl = "scripts.apxv_ctl:main"
apxv-serve = "scripts.apxv_serve:main"
setup-voice = "scripts.setup_voice:main"
run-voice-demo = "scripts.run_voice_demo:main"
ceremony-transcript = "scripts.ceremony_transcript:main"
export-verifier-bundle = "scripts.export_verifier_bundle:main"
apxv-onboard = "scripts.onboard:main"
apxv-bootstrap = "scripts.apxv_bootstrap:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    "legacy",
    "website-local",
    "agent-tools",
    "terminals",
    ".git",
    "rust/target",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]