[package]
name = "apx-zk"
version = "1.0.0"
edition = "2021"
authors = ["apxv1dev"]
license = "Apache-2.0"
description = "APXV1 entity Groth16 zero-knowledge proof circuits (BN254)"

[lib]
name = "apx_zk"
path = "src/lib.rs"

[[bin]]
name = "apx-zk"
path = "src/main.rs"

[dependencies]
ark-std = { version = "0.4", features = ["std", "getrandom"] }
ark-ff = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-snark = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
rand = { version = "0.8", features = ["std", "std_rng"] }

[dev-dependencies]
tempfile = "3.8"