[package]
name = "apxv"
version = "1.3.2"
description = "APXV desktop operator console"
authors = ["APXV"]
edition = "2021"

[lib]
name = "apxv_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-single-instance = { version = "2", features = ["semver"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
